@@ -1,4 +1,9 @@
-2001-01-18  Daniel Steffen  <das@users.sourceforge.net>
+2002-01-18  Don Porter <dgp@users.sourceforge.net>
+
+	* win/tclWinDde.c:
+	* win/tclWinReg.c: Overlooked callers of Tcl_GetIndexFromObj
+
+2002-01-18  Daniel Steffen  <das@users.sourceforge.net>
 
 	* generic/tclThreadTest.c:
 	* mac/tclMacChan.c:
